--- a/Frontend/src/assets/css/navigation.css
+++ b/Frontend/src/assets/css/navigation.css
@@ -82,7 +82,7 @@
 
     /* Bottom navigation */
     .sidebar {
-        position: fixed;
+        position: relative;
         bottom: 0;
         left: 0;
         right: 0;
