--- a/Frontend/src/Login/login.css
+++ b/Frontend/src/Login/login.css
@@ -28,7 +28,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  min-height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   display: flex;
   align-items: center;
   justify-content: center;
