--- a/Frontend/src/assets/css/header.css
+++ b/Frontend/src/assets/css/header.css
@@ -27,3 +27,13 @@
     font-size: 1.35rem;
     font-weight: 500;
 }
+
+@media screen and (max-width: 768px) {
+    .header {
+        padding: 1rem 0.5rem;
+    }
+
+    .title {
+        font-size: 1em;
+    }
+}
