--- a/Frontend/src/assets/css/normalize.css
+++ b/Frontend/src/assets/css/normalize.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Inter", sans-serif;
   }
 
 @media (prefers-reduced-motion: reduce) {
@@ -15,4 +16,15 @@
 
 body{
     height: calc(var(--vh, 1vh) * 100);
+}
+
+.main-content {
+    flex-grow: 1;
+    display: flex;
+}
+
+@media (max-width: 768px) {
+    .main-content {
+        flex-direction: column-reverse;
+    }
 }
