--- a/Frontend/src/assets/css/header.css
+++ b/Frontend/src/assets/css/header.css
@@ -30,7 +30,8 @@
 
 @media screen and (max-width: 768px) {
     .header {
-        padding: 1rem 0.5rem;
+        padding: 0.8rem;
+        gap: 1rem;
     }
 
     .title {
