--- a/Frontend/src/assets/css/header.css
+++ b/Frontend/src/assets/css/header.css
@@ -28,6 +28,10 @@
     font-weight: 500;
 }
 
+.header {
+    animation: opacityfadeIn 0.6s ease-out both;
+ }
+  
 @media screen and (max-width: 768px) {
     .header {
         padding: 0.8rem;
