--- a/Frontend/src/Index/index.css
+++ b/Frontend/src/Index/index.css
@@ -291,6 +291,7 @@ form button:hover {
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
+
 .form-title {
   font-size: 1.5rem;
   font-weight: 600;
@@ -1329,11 +1330,6 @@ textarea::-webkit-scrollbar-thumb:hover {
     padding: 12px 24px;
   }
 
-  .form-row {
-    flex-direction: column;
-    gap: 1rem;
-  }
-
   .coordinates {
     display: none;
   }
@@ -1450,8 +1446,14 @@ textarea::-webkit-scrollbar-thumb:hover {
     bottom: 0;
     left: 0;
     right: 0;
-    height: 80vh;
-    max-height: 80vh;
+    top: auto;
+    left: 50%;
+    transform: translateX(-50%) translateY(0);
+    width: 100%;
+    max-width: 450px;
+    height: 50vh;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
     display: flex;
     flex-direction: column;
     background-color: var(--background-color);
@@ -1459,11 +1461,11 @@ textarea::-webkit-scrollbar-thumb:hover {
     padding: 0;
     display: none;
     z-index: 1000;
-    border-radius: 12px 12px 0 0;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(10px);
-    transform: translateY(100%);
     transition: transform 0.3s ease-in-out;
+    padding: 1rem;
+    padding-top: 1.5rem;
+    font-size: 1rem;
   }
 
   .form-overlay {
@@ -1472,41 +1474,78 @@ textarea::-webkit-scrollbar-thumb:hover {
     left: 0;
     width: 100vw;
     height: 100vh;
-    background-color: black;
-    opacity: 0.5;
+    background-color: rgba(0, 0, 0, 0.5);
     z-index: 999;
     display: none;
   }
 
   .form-panel.visible {
-      transform: translateY(0);
       display: flex;
+  }
+
+  .form-header {
+    padding-bottom: 0.5rem;
+    margin-bottom: 1.25rem;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .form-group, .form-row {
+    margin-bottom: 0.5em;
+  }
+
+  input,
+  select,
+  textarea {
+    font-size: 0.9em;
+    padding: 0.5rem;
+  }
+
+  .form-group label {
+    font-size: 0.75em;
+    margin: 0;
+    margin-bottom: 0.25em;
+  }
+
+  .id-date-group {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  .form-title {
+    font-size: 1.25em;
+    margin-bottom: 0.75rem;
+  }
+
+  .sighting-id {
+    font-size: 0.875em;
   }
 
   /* Form adjustments for mobile */
   .form-row {
       flex-direction: column;
-      gap: 0.5rem;
+      gap: 0.75rem;
   }
 
   .form-content {
-      display: flex;
-      flex-direction: column;
-  }
-
-  .form-group {
-      margin-bottom: 1rem;
+    overflow-y: scroll;
   }
 
   .form-buttons {
-      padding-block: 1rem;
+      padding-bottom: 1.25rem;
       margin: 0;
+      margin-top: 1em;
       gap: 0.5rem;
+  }
+
+  #cancel-button {
+    display: none !important;
   }
 
   .btn {
       flex-grow: 1;
-      padding: 1.15em;
+      padding: 1em;
       font-size: 1em;
   }
 
